--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -25,20 +25,24 @@ body{
     body { 
         margin-top: 110px;
     } 
-    .fixed-bottom{
-        position: static; 
-    }
+    // .fixed-bottom{
+    //     position: static; 
+    // }
+   
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1200px) {
     body { 
         margin-top: 130px;
     } 
-    .fixed-bottom{
-        position: static; 
-    }
+    // .fixed-bottom{
+    //     position: static; 
+    // }
     footer{
-        display:none;
+        //display:none;
+        margin-top: 80px;
+        height: 32px;
+        font-size: 10px;
     }
 }
 
@@ -49,6 +53,10 @@ main{
     background-position: center; 
     background-attachment: fixed;
     padding:5px;
+    @media (max-width: 768px) {
+        height: 1400px;
+        margin-top: 100px;
+    }
 }
 
 div{
@@ -75,6 +83,7 @@ div{
     background-color: $opacityBackground;
     height: 50px;
     line-height: 100%;
+   
     button{
         margin-top: 5px;
         margin-bottom: 5px;
@@ -84,21 +93,22 @@ div{
             outline:2px solid red;
             height: 100px;
             line-height: auto;
+            font-size: 20px;
         }
     }
     
-    @media (max-width: 500px) {
+    @media (max-width: 576px) {
         li { width: 100%;
             outline:2px solid blue;
             height: 250px;
             line-height: auto;
+            font-size: 15px;
         } 
     }
-    
 }
 
 .fontColor{
-    color:#6d2885;
+    color:$fontColor;
     font-weight: bold;
 }
 
@@ -119,6 +129,21 @@ div{
         text-align: justify;
         padding-right:5px;
         padding-left:5px;
+    }
+    @media (max-width: 768px) {
+        img { width: 100%;
+            height: auto;
+        } 
+        flex-direction: column;
+        font-size: 15px;
+        line-height: normal;
+    }
+    @media (max-width: 992px) and (min-width: 769px) {
+        font-size: 20px;
+        line-height: normal;
+        img { 
+            margin-top:8%;
+        } 
     }
 }
 
@@ -147,6 +172,8 @@ img{
     border-radius: 8px;
 }
 
+
+
 a{
     text-decoration: none;
     color:darkblue;
@@ -160,8 +187,7 @@ a{
 }
 
 #dymek{
-    background-color:#6d2885;
-    //color:#6d2885;
+    background-color:$fontColor;
     color:white;
     font-size: 13px;
     position:fixed;
@@ -193,6 +219,19 @@ a{
 
 #spanInNav{
     font-size: 20px;
+    text-align: center;
+    text-decoration:underline;
+    text-shadow: 2px 2px 2px rgb(248, 216, 241);
+    background-image:linear-gradient(to right,#343a40,$fontColor,#343a40);
+    border-radius: 5px;
+    width:130px;
+    @media (max-width: 768px) {
+       margin-left: auto;
+       margin-right: auto;
+      
+    }
+
+
 }
 
 #ulInNav{
